refactor: check `Client` response status code
* test: add initial `spec` test

* chore: add `compose.yml` for testing

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,9 @@ coverage/
 *~
 .DS_Store
 
+# Docker Compose
+compose.override.yml
+
 # Don't ignore example and test files
 !example/**
 !testing/**
