--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Directus container configuration
 SECRET="335ce705-39de-46b3-8c37-daeb2f1e91da"
 DB_CLIENT="sqlite3"
 DB_FILENAME="/directus/database/data.db"
@@ -6,3 +7,7 @@ CACHE_ENABLED="false"
 ADMIN_EMAIL="admin@example.com"
 ADMIN_PASSWORD="myPassword1!"
 ADMIN_TOKEN="d225e134-8fa7-49fd-bf61-21ee933d55bb"
+
+# dst CLI options
+DIRECTUS_BASE_URL="http://localhost:8056"
+DIRECTUS_TOKEN="d225e134-8fa7-49fd-bf61-21ee933d55bb"
