test: add `suite`
This commit replaces the previous tests with a suite for a simpler handling of client and schema setup and teardown

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
+###############################################################################
+#                                                                             #
+#                          --- !!! IMPORTANT !!! ---                          #
+#                                                                             #
+#   The test suite reads the .env file to get the configuration for the       #
+#   testing Directus instance. NEVER run tests with production configuration  #
+#   as it may cause data loss or schema changes.                              #
+#                                                                             #
+#   There is a basic check to avoid changes to schema or data, but it is      #
+#   not the case to check if it is correctly working :)                       #
+#                                                                             #
+###############################################################################
+
 # Directus container configuration
 SECRET="335ce705-39de-46b3-8c37-daeb2f1e91da"
 DB_CLIENT="sqlite3"
