--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       directus:
-        image: directus/directus:11
+        image: directus/directus:11.1.0
         ports:
           - 8055:8055
         env:
@@ -68,3 +68,7 @@ jobs:
           -coverprofile=coverage.out
           -coverpkg=./...
           ./...
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
