test: add `typecheck` and write to temp  dir

--- a/.devcontainer/.env.devcontainer
+++ b/.devcontainer/.env.devcontainer
@@ -1,3 +1,6 @@
 # dst CLI options
 DIRECTUS_BASE_URL="http://directus:8055"
 DIRECTUS_TOKEN="d225e134-8fa7-49fd-bf61-21ee933d55bb"
+
+# test values
+DIRECTUS_DB_VENDOR="sqlite"
