--- a/.devcontainer/compose.yml
+++ b/.devcontainer/compose.yml
@@ -3,6 +3,8 @@ name: dst-devcontainer
 services:
   devcontainer:
     image: mcr.microsoft.com/devcontainers/go:1
+    environment:
+      DIRECTUS_VERSION: '11.1.0'
     env_file:
       - .env.devcontainer
     volumes:
