--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,4 +1,4 @@
 # This environment file is used to configure compose.yml
 # do not use this file to configure the containers.
 
-DIRECTUS_VERSION=11.1.0
+DIRECTUS_VERSION="11.1.0"
