--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
 
   "features": {
     "ghcr.io/devcontainers/features/node:1": {},
-    "ghcr.io/guiyomh/features/golangci-lint:0": {}
+    "ghcr.io/guiyomh/features/golangci-lint:0": {},
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
 
   "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}"
