--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,28 @@ on:
       - '**.tmpl'
 
 jobs:
+  generate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+      - name: Generate
+        run: go generate ./... && go mod tidy
+      - name: Check generated files
+        run: |
+          STATUS=$(git status --porcelain)
+          if [ -n "$STATUS" ]; then
+            echo "the branch contains not generated files"
+            echo "run 'go generate ./...' and commit the changes"
+            echo "$STATUS"
+            git --no-pager diff
+            exit 1
+          fi
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -65,6 +87,17 @@ jobs:
           -coverprofile=coverage.out
           -coverpkg=./...
           ./...
+      # Check the generated files in 'testdata' are up-to-date.
+      - name: Check generated files
+        run: |
+          STATUS=$(git status --porcelain)
+          if [ -n "$STATUS" ]; then
+            echo "the branch contains not generated files"
+            echo "run 'go generate ./...' and commit the changes"
+            echo "$STATUS"
+            git --no-pager diff
+            exit 1
+          fi
       - name: Upload coverage reports to Codecov
         if: ${{ matrix.coverage }}
         uses: codecov/codecov-action@v4
