chore: add repo `package.json`

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ cover.*
 
 # Node
 node_modules/
+.pnpm-store/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -60,6 +61,12 @@ coverage/
 
 # Turbo
 .turbo
+
+# Archives
+*.zip
+*.gz
+*.tgz
+*.tar.gz
 
 # Misc
 *~
