--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,7 @@
 {
   "name": "example",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "description": "Example package",
   "scripts": {
