--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
   "declaration": true,
   "emitDeclarationOnly": true,
+  "module": "Node16",
+  "moduleResolution": "Node16",
   "outDir": "dist"
   }
 }
